# wwivbasic

./: BasicLexer.g4  BasicParser.g4  CMakeLists.txt  CMakeSettings.json  README.md  TLexer.g4  TParser.g4  a.cmd  example.bas  if.bas  vcpkg.json
bas/: easy.bas  for.bas  iftrue.bas  rv.bas
core/: CMakeLists.txt  command_line.cpp  command_line.h  file.cpp  file.h  strings_test.cpp
core/test/: file_helper.cpp  file_helper.h
src/: antlrdemo.cpp  basicrun.cpp  context.cpp  context.h  execution_context.cpp  execution_context.h  executor.cpp  executor.h  function_def_visitor.cpp  function_def_visitor.h  main.cpp  utils.cpp  utils.h  utils_test.cpp  value.cpp  value.h
src/stdlib/: common.cpp  common.h  numbers.cpp  numbers.h  strings.cpp  strings.h  strings_test.cpp
